# Live-Weather-Alerts-MCP

./: .gitignore  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt  ui.py
.github/workflows/: ci.yaml  pylint.yml  ruffcheck.yml  tests.yml
client/: client.py
tests/: __init__.py  conftest.py  run_tests.py  test_client.py  test_integration.py  test_nws_api.py  test_server.py  test_tools.py  test_ui.py
weather_mcp/: nws_api.py  server.py  tools.py
